Fix: Anchor tag wrap issue on Safari and Footer link Timeline to Roadmap

--- a/src/v1.1/pages/HowItWorks/Banner/banner.sass
+++ b/src/v1.1/pages/HowItWorks/Banner/banner.sass
@@ -22,6 +22,8 @@
     +shadow-deep()
     margin-right: -$hspace-l
     z-index: 1
+    a
+      white-space: nowrap // Safari fix
   &__topics
     grid-column: 7/span 4
     grid-row: 2
